--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
     <div id="project-grid">
       <div class="image-content">
- <a href="https://codepen.io/Motun/full/qBJvBZM" target="_blank">
+ <a href="https://inspiring-semifreddo-fc8ab0.netlify.app/" target="_blank">
 <img  class="project-image" src="https://i.postimg.cc/RhBRzvc7/Screenshot-40.png"  alt="Thumbnail project"/></a>
    <div class="project-title">
 <p >CONFETTI EFFECT</p>
